--- a/app/src/main/res/drawable/ic_search_find_number.xml
+++ b/app/src/main/res/drawable/ic_search_find_number.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="40">
   <path
       android:pathData="M20,0L20,0A20,20 0,0 1,40 20L40,20A20,20 0,0 1,20 40L20,40A20,20 0,0 1,0 20L0,20A20,20 0,0 1,20 0z"
-      android:fillColor="@color/f9dddf"/>
+      android:fillColor="@color/_f9dddf"/>
   <group>
     <clip-path
         android:pathData="M10,10h20v20h-20z"/>
