--- a/app/src/main/res/drawable/profile_bg.xml
+++ b/app/src/main/res/drawable/profile_bg.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <corners android:radius="9dp" />
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/white_language"/>
     <stroke android:width="1dp" android:color="@color/stock"/>
 
 </shape>
