--- a/app/src/main/res/drawable/rounded_box.xml
+++ b/app/src/main/res/drawable/rounded_box.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
+    <solid android:color="@color/white_language" />
     <corners android:radius="12dp" />
-    <stroke android:width="1dp" android:color="#E0E0E0" />
+    <stroke android:width="1dp" android:color="@color/e0e0e0" />
 </shape>
