--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -69,7 +69,7 @@
             android:padding="12dp"
             android:text="@string/allow_permission"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="@color/white_og"
             android:layout_marginBottom="@dimen/_20sdp"
             android:textSize="@dimen/_14sdp" />
 
