--- a/app/src/main/res/layout/activity_on_boarding_overlay_permission.xml
+++ b/app/src/main/res/layout/activity_on_boarding_overlay_permission.xml
@@ -53,7 +53,7 @@
             android:includeFontPadding="false"
             android:text="Almost done"
             android:textColor="@color/black"
-            android:textSize="@dimen/_16sdp" />
+            android:textSize="@dimen/_15sdp" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txtDesc"
@@ -66,7 +66,7 @@
             android:gravity="center"
             android:includeFontPadding="false"
             android:text="Set up live Caller ID by enabling “Draw over other apps” in your system settings"
-            android:textColor="@color/black_light"
+            android:textColor="@color/black_light_keypad"
             android:textSize="@dimen/_10sdp" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -83,8 +83,8 @@
             android:padding="12dp"
             android:text="@string/enable_overlay"
             android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_13sdp" />
+            android:textColor="@color/white_og"
+            android:textSize="@dimen/_12sdp" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txtSkip"
