--- a/app/src/main/res/layout/activity_permission_denied.xml
+++ b/app/src/main/res/layout/activity_permission_denied.xml
@@ -35,7 +35,7 @@
                 android:fontFamily="@font/poppins_medium"
                 android:includeFontPadding="false"
                 android:text="@string/please_open_settings_go_to_permissions_and_allow_them"
-                android:textColor="@color/black_light"
+                android:textColor="@color/black_light_keypad"
                 android:textSize="@dimen/_10sdp" />
 
 
@@ -74,7 +74,7 @@
                         android:fontFamily="@font/poppins_regular"
                         android:includeFontPadding="false"
                         android:text="Tab"
-                        android:textColor="@color/_0c1319"
+                        android:textColor="@color/_0c1319_title"
                         android:textSize="@dimen/_12sdp" />
 
                     <TextView
@@ -134,7 +134,7 @@
                         android:fontFamily="@font/poppins_regular"
                         android:includeFontPadding="false"
                         android:text="Tab"
-                        android:textColor="@color/_0c1319"
+                        android:textColor="@color/_0c1319_title"
                         android:textSize="@dimen/_12sdp" />
 
                     <TextView
@@ -192,7 +192,7 @@
                         android:fontFamily="@font/poppins_medium"
                         android:includeFontPadding="false"
                         android:text="Tab "
-                        android:textColor="@color/_0c1319"
+                        android:textColor="@color/_0c1319_title"
                         android:textSize="@dimen/_12sdp" />
 
                     <TextView
@@ -244,7 +244,7 @@
         android:padding="12dp"
         android:text="@string/go_to_setting"
         android:textAllCaps="false"
-        android:textColor="@color/white"
+        android:textColor="@color/white_og"
         android:textSize="@dimen/_14sdp" />
 
 </RelativeLayout>
