--- a/app/src/main/res/layout/activity_permission_denied_dialog.xml
+++ b/app/src/main/res/layout/activity_permission_denied_dialog.xml
@@ -10,7 +10,7 @@
         android:background="@drawable/rounded_box"
         android:backgroundTint="@color/background"
         android:layout_marginHorizontal="@dimen/_10sdp"
-        android:layout_marginVertical="@dimen/_35sdp"
+        android:layout_marginVertical="@dimen/_10sdp"
         android:padding="15dp">
 
 
@@ -45,7 +45,7 @@
                 android:fontFamily="@font/poppins_medium"
                 android:includeFontPadding="false"
                 android:text="@string/please_open_settings_go_to_permissions_and_allow_them"
-                android:textColor="@color/black_light"
+                android:textColor="@color/black_light_keypad"
                 android:textSize="@dimen/_10sdp" />
 
 
@@ -85,7 +85,7 @@
                         android:fontFamily="@font/poppins_regular"
                         android:includeFontPadding="false"
                         android:text="Tab"
-                        android:textColor="@color/_0c1319"
+                        android:textColor="@color/_0c1319_title"
                         android:textSize="@dimen/_11sdp" />
 
                     <TextView
@@ -102,6 +102,7 @@
                 </LinearLayout>
 
                 <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/img1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_3sdp"
@@ -145,7 +146,7 @@
                         android:fontFamily="@font/poppins_regular"
                         android:includeFontPadding="false"
                         android:text="Tab"
-                        android:textColor="@color/_0c1319"
+                        android:textColor="@color/_0c1319_title"
                         android:textSize="@dimen/_11sdp" />
 
                     <TextView
@@ -162,6 +163,7 @@
                 </LinearLayout>
 
                 <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/img2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/denied_2" />
@@ -203,7 +205,7 @@
                         android:fontFamily="@font/poppins_medium"
                         android:includeFontPadding="false"
                         android:text="Tab "
-                        android:textColor="@color/_0c1319"
+                        android:textColor="@color/_0c1319_title"
                         android:textSize="@dimen/_11sdp" />
 
                     <TextView
@@ -228,6 +230,7 @@
                 </LinearLayout>
 
                 <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/img3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
@@ -256,7 +259,7 @@
             android:padding="12dp"
             android:text="@string/go_to_setting"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="@color/white_og"
             android:textSize="@dimen/_14sdp" />
 
     </RelativeLayout>
