--- a/app/src/main/res/layout/item_onboarding.xml
+++ b/app/src/main/res/layout/item_onboarding.xml
@@ -53,7 +53,7 @@
                     android:paddingVertical="@dimen/_4sdp"
                     android:text="Identify by Caller ID...."
                     android:includeFontPadding="false"
-                    android:textColor="@color/white"
+                    android:textColor="@color/white_og"
                     android:textSize="@dimen/_10sdp" />
 
                 <View
@@ -72,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
                 android:text="Bessie Cooper"
-                android:textColor="@color/white"
+                android:textColor="@color/white_og"
                 android:textSize="@dimen/_20sdp"
                 android:textStyle="bold" />
 
@@ -84,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:text="+1 92565897450 - USA"
-                android:textColor="@color/white"
+                android:textColor="@color/white_og"
                 android:textSize="@dimen/_11sdp" />
 
             <TextView
@@ -125,7 +125,7 @@
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/poppins_regular"
                     android:text="Warning: Potential fraud"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white_og"
                     android:includeFontPadding="false"
                     android:textSize="@dimen/_11sdp" />
             </LinearLayout>
@@ -158,7 +158,7 @@
                         android:fontFamily="@font/poppins_regular"
                         android:includeFontPadding="false"
                         android:text="@string/decline"
-                        android:textColor="@color/white"
+                        android:textColor="@color/white_og"
                         android:textSize="@dimen/_11sdp" />
                 </LinearLayout>
 
@@ -218,7 +218,7 @@
                         android:fontFamily="@font/poppins_regular"
                         android:includeFontPadding="false"
                         android:text="@string/accept"
-                        android:textColor="@color/white"
+                        android:textColor="@color/white_og"
                         android:textSize="@dimen/_11sdp" />
                 </LinearLayout>
 
