--- a/app/src/main/res/layout/language_layout_item.xml
+++ b/app/src/main/res/layout/language_layout_item.xml
@@ -8,21 +8,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_10sdp"
-        android:padding="@dimen/_5sdp"
+        android:paddingVertical="@dimen/_12sdp"
         android:layout_marginTop="@dimen/_6sdp"
         android:background="@drawable/edit_text_background_new_language">
 
         <androidx.appcompat.widget.AppCompatRadioButton
             android:id="@+id/cbLanguage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="@dimen/_4sdp"
-            android:fontFamily="@font/sora_medium"
+            android:layout_marginStart="@dimen/_12sdp"
+            android:fontFamily="@font/poppins_medium"
             android:gravity="center_vertical"
             android:textSize="@dimen/_12sdp"
-            android:text="English"
-            android:drawablePadding="@dimen/_5sdp"
+            android:text=""
+            android:button="@drawable/radio_button_selector"
             android:layout_centerVertical="true" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -31,11 +31,12 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@+id/cbLanguage"
-            android:fontFamily="@font/sora_medium"
+            android:fontFamily="@font/poppins_medium"
             android:gravity="center_vertical"
             android:text="Hindi"
-            android:visibility="gone"
-            android:textColor="@color/black"
+            android:layout_marginStart="@dimen/_7sdp"
+            android:visibility="visible"
+            android:textColor="@color/setting_sub_text_color"
             android:textSize="@dimen/_12sdp" />
 
 
