--- a/app/src/main/res/layout/recent_call_history_item.xml
+++ b/app/src/main/res/layout/recent_call_history_item.xml
@@ -3,7 +3,7 @@
     android:id="@+id/llMain"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@color/white_language"
     android:orientation="vertical">
 
     <RelativeLayout
