--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,24 +9,25 @@
     <color name="black">#FFFFFF</color>
     <color name="black_light">#616977</color>
     <color name="black_light_keypad">#878787</color>
-    <color name="black_light_new">#6B6C6D</color>
+    <color name="black_light_new">#878787</color>
     <color name="white">#000000</color>
     <color name="gray">#AFB1B7</color>
-    <color name="gray1">#919191</color>
+    <color name="gray1">#6B6C6D</color>
+    <color name="gray2">#FFFFFF</color>
     <color name="purple">#397283</color>
     <color name="purple_keypad">#FFFFFF</color>
     <color name="purple_light">#EFE3FF</color>
-    <color name="stock">#DEDEDE</color>
-    <color name="btn_bg">#F4F8FB</color>
-    <color name="stock_new">#EFF2FA</color>
+    <color name="stock">#FFFFFF</color>
+    <color name="btn_bg">#484848</color>
+    <color name="stock_new">#484848</color>
     <color name="green">#0F8904</color>
     <color name="light_green">#EAFFE8</color>
     <color name="red">#FF3C00</color>
     <color name="divider_color">#EEEEF0</color>
     <color name="switch_color">#D6D7DA</color>
-    <color name="popup_bg_color">#FFFFFF</color>
+    <color name="popup_bg_color">#272727</color>
     <color name="setting_round_bg">#F5F5F5</color>
-    <color name="setting_sub_text_color">#01051D</color>
+    <color name="setting_sub_text_color">#FFFFFF</color>
     <color name="swipe_stroke_color">#E6E6E6</color>
     <color name="block_bg">#F3F3F4</color>
     <color name="sim_bg">#DDDDE1</color>
@@ -45,7 +46,7 @@
     <color name="line">#4E4E4E</color>
     <color name="border">#D8DDEA</color>
     <color name="border_new">#E5E7EB</color>
-    <color name="onboarding_bottom_bg">#F4F8FB</color>
+    <color name="onboarding_bottom_bg">#000000</color>
     <color name="onboarding_overlay_bottom_bg">#F4F8FB</color>
     <color name="bg_color">#F4F8FB</color>
     <color name="bg_color_call_log">#1F1F1F</color>
@@ -53,7 +54,7 @@
     <color name="setting_text_color">#FFFFFF</color>
     <color name="setting_title_color">#6B6C6D</color>
     <color name="setting_header_title_color">#FFFFFF</color>
-    <color name="setting_text_light">#878787</color>
+    <color name="setting_text_light">#FFFFFF</color>
     <color name="_939393">#585858</color>
     <color name="_292d32">#FFFFFF</color>
     <color name="_6b6c6d">#878787</color>
@@ -69,11 +70,12 @@
     <color name="_121214">#121214</color>
     <color name="_767676">#767676</color>
     <color name="f52b34">#F52B34</color>
-    <color name="f9dddf">#F9DDDF</color>
+    <color name="_f9dddf">#F9DDDF</color>
     <color name="_20b56e">#20B56E</color>
     <color name="dfe9ed">#DFE9ED</color>
     <color name="_397283">#397283</color>
-    <color name="_0c1319">#0C1319</color>
+    <color name="_0c1319">#F9FAFB</color>
+    <color name="_0c1319_title">#878787</color>
     <color name="e6e6e6">#E6E6E6</color>
     <color name="e6e6e6_keypad">#1F1F1F</color>
     <color name="_06b7280">#6B7280</color>
@@ -86,4 +88,6 @@
     <color name="_111827">#FFFFFF</color>
     <color name="white_dialog">#272727</color>
     <color name="white_search">#565656</color>
+    <color name="d8ddea">#4E4E4E</color>
+    <color name="_4a4a4a">#878787</color>
 </resources>
